--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             <!-- Project 1 -->
             <div class="project__card animate-on-scroll" onclick="openProjectModal(0)">
                 <img src="./assets/img/Screenshot 2025-10-21 224753.png" 
-                     alt="E-Commerce Website" 
+                     alt="Band Website" 
                      class="project__image">
                 <div class="project__content">
                     <h3 class="project__title">Band Website</h3>
@@ -333,13 +333,34 @@
 
             <!-- Project 2 -->
             <div class="project__card animate-on-scroll" onclick="openProjectModal(1)">
-                <img src="https://ui-avatars.com/api/?name=Weather+App&size=400&background=4facfe&color=fff&bold=true" 
+                <img src="./assets/img/Screenshot 2025-10-23 100426.png" 
+                     alt="Portfolio website" 
+                     class="project__image">
+                <div class="project__content">
+                    <h3 class="project__title">Portfolio</h3>
+                    <p class="project__description">
+                        Website giới thiệu bản thân có các animation.
+                    </p>
+                    <div class="project__tech">
+                        <span class="tech__tag">HTML</span>
+                        <span class="tech__tag">CSS</span>
+                        <span class="tech__tag">JavaScript</span>
+                    </div>
+                    <div class="project__links">
+                        <a href="https://github.com/DuyKhanh0410/Portfolio" target="_blank" class="project__link" onclick="event.stopPropagation()">📂 GitHub</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Project 3 -->
+            <div class="project__card animate-on-scroll" onclick="openProjectModal(2)">
+                <img src="./assets/img/Screenshot 2025-10-23 103457.png" 
                      alt="Weather App" 
                      class="project__image">
                 <div class="project__content">
                     <h3 class="project__title">Weather App</h3>
                     <p class="project__description">
-                        Ứng dụng dự báo thời tiết sử dụng API, hiển thị thông tin chi tiết và 5 ngày tới.
+                        Ứng dụng dự báo thời tiết của các thành phố.
                     </p>
                     <div class="project__tech">
                         <span class="tech__tag">HTML</span>
@@ -348,28 +369,7 @@
                         <span class="tech__tag">API</span>
                     </div>
                     <div class="project__links">
-                        <a href="#" class="project__link" onclick="event.stopPropagation()">📂 GitHub</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Project 3 -->
-            <div class="project__card animate-on-scroll" onclick="openProjectModal(2)">
-                <img src="https://ui-avatars.com/api/?name=Task+Manager&size=400&background=f093fb&color=fff&bold=true" 
-                     alt="Task Manager" 
-                     class="project__image">
-                <div class="project__content">
-                    <h3 class="project__title">Task Manager App</h3>
-                    <p class="project__description">
-                        Ứng dụng quản lý công việc với tính năng thêm, sửa, xóa và đánh dấu hoàn thành.
-                    </p>
-                    <div class="project__tech">
-                        <span class="tech__tag">React</span>
-                        <span class="tech__tag">CSS3</span>
-                        <span class="tech__tag">LocalStorage</span>
-                    </div>
-                    <div class="project__links">
-                        <a href="#" class="project__link" onclick="event.stopPropagation()">📂 GitHub</a>
+                        <a href="https://github.com/DuyKhanh0410/weather-app" target="_blank" class="project__link" onclick="event.stopPropagation()">📂 GitHub</a>
                     </div>
                 </div>
             </div>
