--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
             <div class="about__image-box animate-on-scroll">
                 <img src="./assets/img/anhcuaKhanh.png" 
                      alt="Ảnh cá nhân" 
-                     class="about__main-image">
+                     class="about__main-image"
+                      style="height: 500px;">
             </div>
 
             <div> 
@@ -377,7 +378,7 @@
     </section>
     <hr class="mt-80">
     <!-- CERTIFICATES SECTION -->
-    <section class="section" id="certificates" style="margin-top: 70px;">
+    <section class="section box-highlight" id="certificates" style="margin-top: 70px;">
         <h2 class="section__title animate-on-scroll">Chứng Chỉ & Giải Thưởng</h2>
         <div class="certificates__list">
             <div class="certificate__item animate-on-scroll">
